<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/settingsScrollView"
>
    <LinearLayout
            android:background="?attr/itemBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appearanceLinearLayout"
            android:orientation="vertical">

        <View style="@style/itemDivider" android:layout_height="12dp"/>

        <TextView
                android:id="@+id/appearanceSectionTextView"
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="62dp"
                android:text="@string/settings_appearance_section"
        />

        <LinearLayout
                android:id="@+id/themeLinearLayout"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:paddingBottom="16dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:foreground="@drawable/custom_ripple"
                android:clickable="true"
                android:focusable="true"
        >
            <ImageView
                    android:layout_marginEnd="16dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_theme"
                    android:layout_gravity="center"
            />

            <LinearLayout
                    android:paddingEnd="6dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
                <TextView
                        android:id="@+id/themesTextView"
                        style="@style/primaryText"
                        android:text="@string/settings_theme"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="6dp"
                />
                <TextView
                        android:id="@+id/currentThemeTextView"
                        android:textSize="14sp"
                        style="@style/secondaryText"
                        tools:text="@string/settings_current_theme"
                        android:layout_marginEnd="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />
            </LinearLayout>
            <Switch
                    android:id="@+id/whiteBlueThemeSwitch"
                    android:layout_marginEnd="8dp"
                    android:text="@string/settings_theme_text"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccentLavander"
                    android:textAlignment="center"
                    android:thumb="@null"
                    android:background="@drawable/lavander_theme_selector"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
            />

            <Switch
                    android:id="@+id/whiteRedThemeSwitch"
                    android:layout_marginEnd="8dp"
                    android:text="@string/settings_theme_text"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccentPeach"
                    android:textAlignment="center"
                    android:thumb="@null"
                    android:background="@drawable/peach_theme_selector"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
            />

            <Switch
                    android:id="@+id/darkGreenThemeSwitch"
                    android:layout_marginEnd="8dp"
                    android:text="@string/settings_theme_text"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:thumb="@null"
                    android:background="@drawable/dark_theme_selector"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
            />

            <Switch
                    android:id="@+id/blackBlueThemeSwitch"
                    android:text="@string/settings_theme_text"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccentLavander"
                    android:textAlignment="center"
                    android:thumb="@null"
                    android:background="@drawable/black_theme_selector"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
            />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/fragmentOpenAnimLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="62dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/custom_ripple"
        >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="6dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/fragmentOpenAnimTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/primaryText"
                        android:text="@string/settings_anim_open_title"
                />
                <TextView
                        android:id="@+id/fragment_open_anim_summary_textView"
                        android:textSize="14sp"
                        style="@style/secondaryText"
                        android:maxWidth="300dp"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_anim_open_summary"
                />
            </LinearLayout>
            <Switch
                    android:id="@+id/fragmentOpenAnimSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
            />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/fragmentTransitionAnimLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="62dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/custom_ripple"
        >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="6dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/fragmentTransitionAnimTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/primaryText"
                        android:text="@string/settings_anim_transition_title"
                />
                <TextView
                        android:id="@+id/fragmentTransitionAnimSummaryTextView"
                        android:textSize="14sp"
                        style="@style/secondaryText"
                        android:maxWidth="300dp"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_anim_transition_summary"
                />
            </LinearLayout>
            <Switch
                    android:id="@+id/fragmentTransitionAnimSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/toggleButtonLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="62dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/custom_ripple"
        >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="6dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/toggleButtonTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/primaryText"
                        android:text="@string/settings_toggle_button_title"
                />
                <TextView
                        android:id="@+id/toggleButtonSummaryTextView"
                        android:textSize="14sp"
                        style="@style/secondaryText"
                        android:maxWidth="300dp"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_toggle_button_summary"
                />
            </LinearLayout>
            <Switch
                    android:id="@+id/toggleButtonSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
            />
        </LinearLayout>

        <View style="@style/itemDivider" android:layout_height="12dp"/>

        <TextView
                android:id="@+id/serverSectionTextView"
                android:layout_marginStart="62dp"
                android:text="@string/settings_server_section"
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="16dp"
        />

        <LinearLayout
                android:id="@+id/ipAddressLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

            <ImageView
                    android:layout_marginEnd="16dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_ip_address"
                    android:layout_gravity="center"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ipAddressInputLayout"
                    app:boxBackgroundColor="?attr/inputLayoutBackgroundColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?android:attr/textColorSecondary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:hint="@string/settings_ip_address"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_default_ip_address"
                        android:id="@+id/ipAddressEditText"
                />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
                style="@style/materialButton"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp"
                android:id="@+id/updateDataButton"
                android:text="@string/update_button"
        />

        <LinearLayout
                android:id="@+id/authenticationLinearLayout"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusable="true"
                android:clickable="true"
                android:foreground="@drawable/custom_ripple">

            <ImageView
                    android:layout_marginEnd="16dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_gravity="center"
            />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/authenticationTitleTextView"
                        android:enabled="false"
                        style="@style/primaryText"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_auth_title"
                />

                <TextView
                        android:enabled="false"
                        android:id="@+id/authenticationSummaryTextView"
                        android:textSize="14sp"
                        style="@style/secondaryText"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_auth_summary"
                />
            </LinearLayout>
            <Switch
                    android:enabled="false"
                    android:id="@+id/authenticationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
            />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_login"
                app:boxBackgroundColor="?attr/inputLayoutBackgroundColor"
                android:layout_marginTop="8dp"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:textColorHint="?android:attr/textColorSecondary"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_editText"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                app:boxBackgroundColor="?attr/inputLayoutBackgroundColor"
                android:layout_marginTop="4dp"
                android:layout_marginStart="62dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_password"
                android:textColorHint="?android:attr/textColorSecondary"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_editText"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <View style="@style/itemDivider" android:layout_height="12dp"/>
    </LinearLayout>
</ScrollView>
