<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCardView"
    style="@style/BaseCard.Wide">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/channelLayout"
            style="@style/Clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/script_view_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/channelHeader"
                    style="@style/Text.Bold"
                    android:layout_gravity="start"
                    android:textAlignment="center"
                    tools:text="Основной" />

                <TextView
                    style="@style/Text.Secondary"
                    android:layout_gravity="start"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:text="@string/script_channel_pick_action" />
            </LinearLayout>

            <ImageView
                android:id="@+id/additionalContent"
                style="@style/Button.Icon"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/script_view_margin"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <View style="@style/Divider" />

            <TextView
                style="@style/Text.Section"
                android:layout_marginStart="@dimen/script_view_margin"
                android:layout_marginTop="@dimen/script_view_margin"
                android:layout_marginEnd="@dimen/script_view_margin"
                android:text="@string/script_section_light" />

            <LinearLayout
                android:id="@+id/turnOnAction"
                style="@style/Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/script_action_horizontal_padding"
                android:paddingTop="@dimen/script_action_vertical_padding"
                android:paddingEnd="@dimen/script_action_switch_end_padding"
                android:paddingBottom="@dimen/script_action_vertical_padding">

                <TextView
                    style="@style/Text"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/script_action_view_margin"
                    android:layout_weight="1"
                    android:text="@string/action_turn_on_light" />

                <Switch
                    android:id="@+id/turnOnSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/script_action_view_margin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/turnOffAction"
                style="@style/Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/script_action_horizontal_padding"
                android:paddingTop="@dimen/script_action_vertical_padding"
                android:paddingEnd="@dimen/script_action_switch_end_padding"
                android:paddingBottom="@dimen/script_action_vertical_padding">

                <TextView
                    style="@style/Text"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/script_action_view_margin"
                    android:layout_weight="1"
                    android:text="@string/action_turn_off_light" />

                <Switch
                    android:id="@+id/turnOffSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/script_action_view_margin" />
            </LinearLayout>

            <TextView
                style="@style/Text.Section"
                android:layout_marginStart="@dimen/script_view_margin"
                android:layout_marginTop="@dimen/script_view_margin"
                android:layout_marginEnd="@dimen/script_view_margin"
                android:text="@string/channel_backlight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/script_action_horizontal_padding"
                android:paddingTop="@dimen/script_action_vertical_padding"
                android:paddingEnd="@dimen/script_action_switch_end_padding"
                android:paddingBottom="@dimen/script_action_vertical_padding">

                <LinearLayout
                    android:id="@+id/changeBrightnessAction"
                    style="@style/Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Text"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/script_action_view_margin"
                        android:layout_weight="1"
                        android:text="@string/action_change_brightness" />

                    <Switch
                        android:id="@+id/changeBrightnessSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/script_action_view_margin" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/script_action_seekbar_end_margin"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/indicatorSeekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/channel_vertical_padding"
                        android:paddingBottom="@dimen/channel_vertical_padding" />

                    <TextView
                        style="@style/Text"
                        android:layout_width="40dp"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="@dimen/script_action_view_margin"
                        android:textAlignment="textStart"
                        tools:text="0%" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/startOverflowAction"
                style="@style/Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/script_action_horizontal_padding"
                android:paddingTop="@dimen/script_action_vertical_padding"
                android:paddingEnd="@dimen/script_action_switch_end_padding"
                android:paddingBottom="@dimen/script_action_vertical_padding">

                <TextView
                    style="@style/Text"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/script_action_view_margin"
                    android:layout_weight="1"
                    android:text="@string/action_start_overflow" />

                <Switch
                    android:id="@+id/startOverflowSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/script_action_view_margin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stopOverflowAction"
                style="@style/Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/script_action_vertical_padding"
                android:orientation="horizontal"
                android:paddingStart="@dimen/script_action_horizontal_padding"
                android:paddingTop="@dimen/script_action_vertical_padding"
                android:paddingEnd="@dimen/script_action_switch_end_padding"
                android:paddingBottom="@dimen/script_action_vertical_padding">

                <TextView
                    style="@style/Text"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/script_action_view_margin"
                    android:layout_weight="1"
                    android:text="@string/action_stop_overflow" />

                <Switch
                    android:id="@+id/stopOverflowSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/script_action_view_margin" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>